# homework_list

./: .gitignore  README.md  app.py  data_cloling.py  filters.py  iidx_player_data.csv  pyproject.toml  table.html  test.txt  utils.py  validation.py
