[project]
name = "homework-list"
version = "0.1.0"
description = "test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.7.0",
    "streamlit>=1.39.0",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
line-length = 79
select = ["D100","ANN001"]
ignore = [
    "D203",
    "D212",
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B904", # raise from err
]
fixable = ["ALL"]

[tool.ruff.lint]
select = ["D100","ANN001"]
ignore = [
    "D203",
    "D212",
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B904", # raise from err
]
fixable = ["ALL"]

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "venv"]
